--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pytest
+pytest != 9.0.0 # https://github.com/pytest-dev/pytest/issues/13895
 
 # The following dependencies are actually optional:
 ecdsa
