fix unknown mark

--- a/pytest.ini
+++ b/pytest.ini
@@ -28,6 +28,7 @@ markers =
     labeled-response
     message-tags
     metadata-2
+    draft/message-redaction
     draft/multiline
     multi-prefix
     server-time
