Add tests for length limits in ISUPPORT

--- a/pytest.ini
+++ b/pytest.ini
@@ -36,13 +36,19 @@ markers =
     sts
 
     # isupport tokens
+    AWAYLEN
     BOT
+    CHANLIMIT
+    CHANNELLEN
     ELIST
     INVEX
+    KICKLEN
     MONITOR
+    NICKLEN
     PREFIX
     STATUSMSG
     TARGMAX
+    TOPICLEN
     UTF8ONLY
     WHOX
 
