Also run Solanum's non-services tests

--- a/workflows.yml
+++ b/workflows.yml
@@ -484,6 +484,9 @@ tests:
     hybrid:
         software: [hybrid, anope]
 
+    solanum:
+        software: [solanum]
+
     solanum-atheme:
         software: [solanum, atheme]
 
