--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -554,6 +554,7 @@ jobs:
     - test-ngircd-atheme
     - test-plexus4
     - test-sable
+    - test-solanum
     - test-solanum-anope
     - test-solanum-atheme
     - test-sopel
@@ -1316,6 +1317,41 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: pytest-results_sable_stable
+        path: pytest.xml
+  test-solanum:
+    needs:
+    - build-solanum
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+    - name: Download build artefacts
+      uses: actions/download-artifact@v4
+      with:
+        name: installed-solanum
+        path: '~'
+    - name: Unpack artefacts
+      run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
+    - name: Install system dependencies
+      run: sudo apt-get install faketime
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt pytest-xdist pytest-timeout
+    - env:
+        IRCTEST_DEBUG_LOGS: ${{ runner.debug }}
+      name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH  make
+        solanum
+      timeout-minutes: 30
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v4
+      with:
+        name: pytest-results_solanum_stable
         path: pytest.xml
   test-solanum-anope:
     needs:
