--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -558,7 +558,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -599,7 +599,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -640,7 +640,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -683,7 +683,7 @@ jobs:
         make build
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -724,7 +724,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -759,7 +759,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -800,7 +800,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -842,7 +842,7 @@ jobs:
         make -j 4
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -872,7 +872,7 @@ jobs:
       run: pip install git+https://github.com/progval/Limnoria.git@master cryptography
         pyxmpp2-scram
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -913,7 +913,7 @@ jobs:
         make install
         cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -948,7 +948,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -989,7 +989,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1030,7 +1030,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1071,7 +1071,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1117,12 +1117,13 @@ jobs:
         workspaces: sable -> target
     - run: rustc --version
     - run: sudo systemctl start postgresql.service
+    - run: wait-for-it --host=localhost --port=5432 --timeout=15
     - name: Build Sable
       run: |
         cd $GITHUB_WORKSPACE/sable/
         cargo build
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1158,7 +1159,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1199,7 +1200,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1240,7 +1241,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1269,7 +1270,7 @@ jobs:
     - name: Install dependencies
       run: pip install git+https://github.com/sopel-irc/sopel.git
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1310,7 +1311,7 @@ jobs:
         mkdir -p ~/.local/bin/
         ln -s $(pwd)/index.js ~/.local/bin/thelounge
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1345,7 +1346,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1386,7 +1387,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1427,7 +1428,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1474,7 +1475,7 @@ jobs:
         wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
         wget -q https://wordpress.org/wordpress-6.7.2.zip -O wordpress-latest.zip
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
