--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -126,7 +126,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -167,7 +167,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
