--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -604,7 +604,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -645,7 +645,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -686,7 +686,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -727,7 +727,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -770,7 +770,7 @@ jobs:
         make build
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -811,7 +811,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -846,7 +846,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -887,7 +887,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -928,7 +928,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -981,7 +981,7 @@ jobs:
         mkdir -p $HOME/.local/bin
         cp $HOME/.local/sbin/ircd $HOME/.local/bin/ircd
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1023,7 +1023,7 @@ jobs:
         make -j 4
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1052,7 +1052,7 @@ jobs:
     - name: Install dependencies
       run: pip install limnoria==2023.5.27 cryptography pyxmpp2-scram
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1093,7 +1093,7 @@ jobs:
         make install
         cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1128,7 +1128,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1169,7 +1169,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1210,7 +1210,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1251,7 +1251,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1297,12 +1297,13 @@ jobs:
         workspaces: sable -> target
     - run: rustc --version
     - run: sudo systemctl start postgresql.service
+    - run: wait-for-it --host=localhost --port=5432 --timeout=15
     - name: Build Sable
       run: |
         cd $GITHUB_WORKSPACE/sable/
         cargo build
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1338,7 +1339,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1379,7 +1380,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1420,7 +1421,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1449,7 +1450,7 @@ jobs:
     - name: Install dependencies
       run: pip install sopel==7.1.8
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1490,7 +1491,7 @@ jobs:
         mkdir -p ~/.local/bin/
         ln -s $(pwd)/index.js ~/.local/bin/thelounge
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1525,7 +1526,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1566,7 +1567,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1607,7 +1608,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime
+      run: sudo apt-get install faketime wait-for-it
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
