--- a/workflows.yml
+++ b/workflows.yml
@@ -273,6 +273,8 @@ software:
             - run: rustc --version
             - run: start postgresql
               run: "sudo systemctl start postgresql.service"
+            - run: wait for postgresql
+              run: "wait-for-it --host=localhost --port=5432 --timeout=15"
         env: "IRCTEST_POSTGRESQL_URL=postgresql://localhost IRCTEST_DEBUG_LOGS=1"
         separate_build_job: false
         build_script: |
