--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -1313,7 +1313,7 @@ jobs:
         IRCTEST_DEBUG_LOGS: ${{ runner.debug }}
       name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml --timeout 300' PATH=$HOME/.local/bin:$PATH
-        IRCTEST_POSTGRESQL_URL=postgresql://postgres@localhost IRCTEST_DEBUG_LOGS=1
+        IRCTEST_POSTGRESQL_URL=postgresql://postgres:postgres@localhost IRCTEST_DEBUG_LOGS=1
         PATH=$GITHUB_WORKSPACE/sable/target/debug/sbin:$GITHUB_WORKSPACE/sable/target/debug/bin:$GITHUB_WORKSPACE/sable/target/debug:$PATH
         make sable
       timeout-minutes: 30
