--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -558,7 +558,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -599,7 +599,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -640,7 +640,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -683,7 +683,7 @@ jobs:
         make build
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -724,7 +724,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -759,7 +759,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -800,7 +800,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -842,7 +842,7 @@ jobs:
         make -j 4
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -872,7 +872,7 @@ jobs:
       run: pip install git+https://github.com/progval/Limnoria.git@master cryptography
         pyxmpp2-scram
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -913,7 +913,7 @@ jobs:
         make install
         cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -948,7 +948,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -989,7 +989,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1030,7 +1030,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1071,7 +1071,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1118,17 +1118,20 @@ jobs:
     - run: rustc --version
     - name: start postgresql
       run: sudo systemctl start postgresql.service
+    - name: set postgresql password
+      run: 'sudo -u postgres psql -c "ALTER USER postgres PASSWORD ''root''"
+
+        '
     - name: Build Sable
       run: |
         cd $GITHUB_WORKSPACE/sable/
         cargo build
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
         pip install -r requirements.txt pytest-xdist pytest-timeout
-        wait-for-it --host=localhost --port=5432 --timeout=15
     - env:
         IRCTEST_DEBUG_LOGS: ${{ runner.debug }}
       name: Test with pytest
@@ -1161,7 +1164,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1202,7 +1205,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1243,7 +1246,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1272,7 +1275,7 @@ jobs:
     - name: Install dependencies
       run: pip install git+https://github.com/sopel-irc/sopel.git
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1313,7 +1316,7 @@ jobs:
         mkdir -p ~/.local/bin/
         ln -s $(pwd)/index.js ~/.local/bin/thelounge
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1348,7 +1351,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1389,7 +1392,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1430,7 +1433,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1477,7 +1480,7 @@ jobs:
         wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
         wget -q https://wordpress.org/wordpress-6.7.2.zip -O wordpress-latest.zip
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
