--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -604,7 +604,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -645,7 +645,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -686,7 +686,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -727,7 +727,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -770,7 +770,7 @@ jobs:
         make build
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -811,7 +811,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -846,7 +846,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -887,7 +887,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -928,7 +928,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -981,7 +981,7 @@ jobs:
         mkdir -p $HOME/.local/bin
         cp $HOME/.local/sbin/ircd $HOME/.local/bin/ircd
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1023,7 +1023,7 @@ jobs:
         make -j 4
         make install
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1052,7 +1052,7 @@ jobs:
     - name: Install dependencies
       run: pip install limnoria==2023.5.27 cryptography pyxmpp2-scram
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1093,7 +1093,7 @@ jobs:
         make install
         cp $GITHUB_WORKSPACE/data/nefarious/* $HOME/.local/lib
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1128,7 +1128,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1169,7 +1169,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1210,7 +1210,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1251,7 +1251,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1298,17 +1298,20 @@ jobs:
     - run: rustc --version
     - name: start postgresql
       run: sudo systemctl start postgresql.service
+    - name: set postgresql password
+      run: 'sudo -u postgres psql -c "ALTER USER postgres PASSWORD ''root''"
+
+        '
     - name: Build Sable
       run: |
         cd $GITHUB_WORKSPACE/sable/
         cargo build
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
         pip install -r requirements.txt pytest-xdist pytest-timeout
-        wait-for-it --host=localhost --port=5432 --timeout=15
     - env:
         IRCTEST_DEBUG_LOGS: ${{ runner.debug }}
       name: Test with pytest
@@ -1341,7 +1344,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1382,7 +1385,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1423,7 +1426,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1452,7 +1455,7 @@ jobs:
     - name: Install dependencies
       run: pip install sopel==7.1.8
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1493,7 +1496,7 @@ jobs:
         mkdir -p ~/.local/bin/
         ln -s $(pwd)/index.js ~/.local/bin/thelounge
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1528,7 +1531,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1569,7 +1572,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
@@ -1610,7 +1613,7 @@ jobs:
     - name: Unpack artefacts
       run: cd ~; find -name 'artefacts-*.tar.gz' -exec tar -xzf '{}' \;
     - name: Install system dependencies
-      run: sudo apt-get install faketime wait-for-it
+      run: sudo apt-get install faketime
     - name: Install irctest dependencies
       run: |-
         python -m pip install --upgrade pip
